--- a/index.html
+++ b/index.html
@@ -2,18 +2,32 @@
 <html>
 
 <head>
-    <link rel="shortcut icon" type="image/x-icon" href="https://img.apksum.com/30/com.auto.clicker.tapper5/3.8/icon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="./icon.png">
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Class Auto Join</title>
+    <title>Join in class</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
     <script src='main.js'></script>
+
+
 </head>
 
 <body>
 
-    <h1> a Start </h1>
+    <section class="menu">
+        <h1>Join in class</h1>
+        <div>
+            <label>Available Classes</label>
+            <select id="classselect">
+            
+            <option value="a">2°A</option>
+
+        </select>
+        </div>
+        <button onclick="openwindow(window)">Join Class</button>
+    </section>
+
 </body>
 
 </html>
