ClassJSON  and EstranClass

--- a/index.html
+++ b/index.html
@@ -16,12 +16,26 @@
 <body>
 
     <section class="menu">
-        <h1>Join in class</h1>
+        <h1>Entrar na Aula</h1>
         <div>
-            <label>Available Classes</label>
+            <label>Salas Disponíveis</label>
             <select id="classselect">
             
             <option value="a">2°A</option>
+            <option value="c">2°C</option>
+
+
+        </select>
+        </div>
+        <div id="LEselectDiv">
+            <label>Língua estrangeira</label>
+            <select id="LEselect">
+            
+            <option value="esp">Espanhol</option>
+            <option value="ing1">Inglês Regular</option>
+            <option value="ing2">Inglês intermediário</option>
+            <option value="ing3">Inglês Conversação</option>
+
 
         </select>
         </div>
