2B Add and Creditos

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <select id="classselect">
             
             <option value="a">2°A</option>
+            <option value="b">2°B</option>
             <option value="c">2°C</option>
 
 
@@ -40,6 +41,7 @@
         </select>
         </div>
         <button onclick="openwindow(window)">Join Class</button>
+        <p id="credit">Feito por <a href="https://github.com/Lucsvieirabr">Lucas Vieira da Silva</a></p>
     </section>
 
 </body>
