Check Box LocalStorage Values

--- a/index.html
+++ b/index.html
@@ -51,6 +51,19 @@
 
         </select>
         </div>
+        <div class="container">
+
+            <input id="PC" type="checkbox" onchange="StorageData('PC', 'itinerarios', true, 'PC')" /> Pensamento Computacional <br />
+            <input id="LEAS" type="checkbox" onchange="StorageData('LEAS', 'itinerarios', true, 'LEAS')" /> LEAS <br />
+            <input type="checkbox" /> This is checkbox <br />
+            <input type="checkbox" /> This is checkbox <br />
+            <input type="checkbox" /> This is checkbox <br />
+            <input type="checkbox" /> This is checkbox <br />
+            <input type="checkbox" /> This is checkbox <br />
+            <input type="checkbox" /> This is checkbox <br />
+            <input type="checkbox" /> This is checkbox <br />
+            <input type="checkbox" /> This is checkbox <br />
+        </div>
 
         <button onclick="openwindow(window)">Join Class</button>
         <p id="credit">Feito por <a href="https://github.com/Lucsvieirabr">Lucas Vieira da Silva</a></p>
