--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
 
         </select>
         </div>
+        <div id="itinerarioLabel">
+            <label>Itinerários</label>
+
+        </div>
+
         <div class="border">
             <div class="container">
 
