Almost end Itinerário Join

--- a/index.html
+++ b/index.html
@@ -115,6 +115,10 @@
                     <label>Experimentação Científica</label>
                 </div>
                 <div class="option">
+                    <input id="Trips" type="checkbox" onchange="StorageData('Trips', 'itinerarios', true, 'Trips')" />
+                    <label>Trips Virtuais</label>
+                </div>
+                <div class="option">
                     <input id="ProdText" type="checkbox" onchange="StorageData('ProdText', 'itinerarios', true, 'ProdText')" />
                     <label>Produção Textual</label>
                 </div>
@@ -139,6 +143,10 @@
                     <label>Gamificação</label>
                 </div>
                 <div class="option">
+                    <input id="Gam2" type="checkbox" onchange="StorageData('Gam2', 'itinerarios', true, 'Gam2')" />
+                    <label>Gamificação 2 Horário</label>
+                </div>
+                <div class="option">
                     <input id="EmpSoc" type="checkbox" onchange="StorageData('EmpSoc', 'itinerarios', true, 'EmpSoc')" />
                     <label>Empreendedorismo Social</label>
                 </div>
@@ -149,10 +157,6 @@
                 <div class="option">
                     <input id="EspRenSoc" type="checkbox" onchange="StorageData('EspRenSoc', 'itinerarios', true, 'EspRenSoc')" />
                     <label>Esporte de Rendimento e social</label>
-                </div>
-                <div class="option">
-                    <input id="TutMat" type="checkbox" onchange="StorageData('TutMat', 'itinerarios', true, 'TutMat')" />
-                    <label>Tutoria de Matemática</label>
                 </div>
                 <div class="option">
                     <input id="Desp" type="checkbox" onchange="StorageData('Desp', 'itinerarios', true, 'Despf')" />
