--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h1>Entrar na Aula</h1>
         <div class="SelectsDiv">
             <span>Sala</span>
-            <select id="classselect" onchange="StorageData('classselect', 'class')">
+            <select id="classselect" class="ClasSelec" onchange="StorageData('classselect', 'class')">
             
             <option value="a">2°A</option>
             <option value="b">2°B</option>
