--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
 
     <section class="menu">
-        <img src="./sale.png">
+        <img src="./sale.png" id="saleImg">
         <h1>Entrar na Aula</h1>
         <div class="SelectsDiv">
             <span>Sala</span>
